--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,21 +1,60 @@
-img{
-    width: 16rem;
-    height: 12rem;
-    object-fit: cover;
-    padding: 5px;
+img {
+  width: 16rem;
+  height: 12rem;
+  object-fit: cover;
+  padding: 5px;
 }
 #scrolltime {
-    background-color: grey;
-    overflow-x: scroll;
-    padding-bottom: 5px;
+  background-color: grey;
+  overflow-x: scroll;
+  padding-bottom: 5px;
 }
-body{
-    background-color: grey;
+body {
+  background-color: grey;
+}
+#logo {
+  padding-left: 20px;
+  height: fit-content;
+  width: 80px;
+}
+.dropbtn {
+  background-color: #b7bfbc;
+  color: rgb(7, 7, 7);
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
 
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
-#logo{
-    padding-left:20px ;
-   height: fit-content;
-   width: 80px;
-    
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  
 }
+
+.dropdown-content li {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content li:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
