--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -5,12 +5,12 @@ img {
   padding: 5px;
 }
 #scrolltime {
-  background-color: grey;
+  background-color: white;
   overflow-x: scroll;
   padding-bottom: 5px;
 }
 body {
-  background-color: grey;
+  background-color: white;
 }
 #logo {
   padding-left: 20px;
